<resources>
    <string name="app_name">Agro Mall Farms</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log Out</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_register">Register Farmer</string>
    <string name="menu_logout">@string/action_logout</string>
    <string name="menu_splashscreen">Splashscreen</string>
    <string name="menu_login">Login</string>

    <string name="home_second">Home Second</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="other_name">Other Names</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="personal_info">Personal Information</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="farm_details">Farm Details</string>
    <string name="farm_name">Farm Name</string>
    <string name="location">Location</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="register">Register</string>
    <string name="menu_map">Map</string>
    <string name="total_number_of_farmers">Total Number of Farmers</string>
    <string name="total_number_of_farms">Total Number of Farms</string>
    <string name="required">Required</string>
    <string name="we_keep_in_touch">...we keep in touch</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>

    <string name="login_email">test@theagromall.com</string>
    <string name="login_password">password</string>
    <string name="click_to_take_a_picture">Click to take a picture</string>
</resources>
