<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/menu_register" />
    </group>
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/menu_map" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/menu_logout" />
</menu>
