<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dimen_64dp"
        android:layout_marginTop="@dimen/dimen_120dp"
        android:layout_marginEnd="@dimen/dimen_64dp"
        android:layout_marginBottom="@dimen/dimen_120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/farmers"
        app:layout_constraintBottom_toTopOf="@+id/loginEmailLayout"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailLayout"
        app:layout_constraintStart_toStartOf="@+id/loginEmailLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/loginPasswordLayout"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordLayout"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginBottom="@dimen/dimen_32dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:startIconDrawable="@drawable/ic_key">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginBottom="@dimen/dimen_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/login" />

</androidx.constraintlayout.widget.ConstraintLayout>